<resources>
	<string name="app_name">HTTP Ajax</string>
	<string name="app_description">SocksHttp is an SSH TUNNEL client, designed to bypass local blocking and censorship on the network.</string>
	<string name="attention">Attention</string>
	<string name="cancel">Cancel</string>
	<string name="ok">Ok</string>
	<string name="exit">Exit</string>
	<string name="error_request_permission">You need access to External Storage</string>
	<string name="importing_settings">Importing configuration</string>
	<string name="log_settings_valid">File valid until: %1$s</string>
	<string name="log_server_banner">Server Message:</string>
	<string name="log_conection_lost">Connection lost</string>
	<string name="title_mode_night">Night Mode</string>
	<string name="ssl_handshake">SSL Handshake</string>
	<string name="start">Start</string>
	<string name="stop">Stop</string>
	<string name="reconnect">Reconnect</string>
	<string name="bugs_fixed">Small bugs fixed</string>
	<string name="alert_app_on_latest">Your app is at the latest version</string>
	<string name="alert_update_error">An error occurred while verifying the update. Please contact the developer.\n</string>
	<string name="alert_update_app_now">Update your app now!</string>
	<string name="stopping_service_ssh">Stopping SSH service</string>
	<string name="starting_service_ssh">Starting SSH service</string>
	<string name="title_auth">Authentication</string>
	<string name="auth_message">Complete with SSH account details</string>
	<string name="auth_username">Username</string>
	<string name="password">Password</string>
	<string name="show_password">Show password</string>
	<string name="save_password">Save password</string>
	<string name="channel_name_background">Connection statistics</string>
	<string name="channel_description_background">Ongoing statistics of the established SocksHttp connection</string>
	<string name="channel_name_status">Connection status change</string>
	<string name="channel_description_status">Status changes of the SocksHttp connection (Connecting, authenticating,…)</string>
	<string name="channel_name_userreq">User interaction required</string>
	<string name="channel_description_userreq">SocksHttp connection requires a user input, e.g. two factor authentification</string>
	<string name="state_starting">Getting Started</string>
	<string name="state_connecting">Connecting</string>
	<string name="state_wait">Waiting for server response</string>
	<string name="state_auth">Authenticating</string>
	<string name="state_auth_success">Authenticated</string>
	<string name="state_get_config">Getting client configuration</string>
	<string name="state_assign_ip">Assigning IP addresses</string>
	<string name="state_add_routes">Adding routes</string>
	<string name="state_connected">Connected</string>
	<string name="state_disconnected">Disconnected</string>
	<string name="state_reconnecting">Reconnecting</string>
	<string name="state_stopping">Stopping</string>
	<string name="state_noprocess">Not running</string>
	<string name="state_resolve">Resolving host names</string>
	<string name="state_tcp_connect">Connecting (TCP)</string>
	<string name="state_auth_failed">Authentication failed</string>
	<string name="state_nonetwork">Waiting for network</string>
	<string name="state_waitconnectretry">Waiting% ss seconds between connection attempt</string>
	<string name="state_auth_pending">Waiting for Autentication</string>
	<string name="state_user_vpn_password">Waiting for user VPN password</string>
	<string name="state_user_vpn_permission">Waiting for user permission to use VPN API</string>
	<string name="state_user_vpn_password_cancelled">VPN password input dialog cancelled</string>
	<string name="state_user_vpn_permission_cancelled">VPN API permission dialog cancelled</string>
	<string name="unknown_state">Status Unknown</string>
	<string name="nought_alwayson_warning">If you did not get a VPN confirmation dialog, you have \"Always on VPN\" enabled for another app. In that case only that app is allowed to connect to a VPN. Check under Settings-> Networks more .. -> VPNS</string>
	<string name="no_vpn_support_image">Your image does not support the VPNService API, sorry :(</string>
	<string name="state_proxy_running">Running proxy</string>
	<string name="state_proxy_inject">Injecting</string>
	<string name="mobile_info">Running on %3$s %1$s (%2$s), Android %5$s API %4$d</string>
	<string name="app_mobile_info">Application Version: %1$s %2$s</string>
	<string name="alert_update_app">Install the latest version</string>
	<string name="error_settings_expired">Expired file</string>
	<string name="error_file_settings_invalid">Invalid configuration</string>
	<string name="error_file_invalid">Invalid File</string>
	<string name="error_internet_off">Please connect to the internet</string>
	<string name="error_empty_payload">Payload cannot be empty</string>
	<string name="error_empty_settings">Configure correctly to start</string>
	<string name="error_proxy_invalid">Invalid proxy</string>
	<string name="error_server_ip_invalid">Invalid server/IP</string>
	<string name="error_root_detected">Locked configuration for devices with root access</string>
	<string name="error_vpn_sniffer_detected">Another running VPN application has been detected, stop it before</string>
	<string name="error_save_settings">"Couldn't save configuration"</string>
	<string name="permited_only_network_mobile">Configuration allowed only for mobile data network</string>
	<string name="about">About</string>
	<string name="config">Configuration</string>
	<string name="settings">Settings</string>
	<string name="settings_ssh">SSH Settings</string>
	<string name="network_mobile">Mobile network</string>
	<string name="method_connection">Connection Method</string>
	<string name="rate_app">Rate</string>
	<string name="feedback">Feedback</string>
	<string name="first_start_msg">This vpn application is for free, you can make your own config.</string>
	<string name="title_login_main">Login Details</string>
	<string name="category_forward_udp">Udp forwarding</string>
	<string name="title_forward_udp">Forward UDP</string>
	<string name="summary_forward_udp">If active, it redirects requests to the remote server. If not, UDP requests will not be resolved.</string>
	<string name="title_resolver_udp">UDP Gateway (Remote)</string>
	<string name="summary_resolver_udp">Standard (7300)</string>
	<string name="category_forward_dns">DNS Forwarding</string>
	<string name="title_forward_dns">Forward DNS</string>
	<string name="summary_forward_dns">If active, it redirects requests to the remote server. If not, DNS requests will be resolved by the local system.</string>
	<string name="title_dns_primary">Primary DNS</string>
	<string name="summary_dns_primary">Standard (1.1.1.1)</string>
	<string name="dialog_message_dns_primary">Enter the DNS ip</string>
	<string name="category_advanced_settings">Advanced Settings</string>
	<string name="title_hide_log">Hide Log on Start</string>
	<string name="summary_hide_log">If active, the log will not be shown automatically.</string>
	<string name="title_auto_clear_log">Automatically Clear Logs</string>
	<string name="summary_auto_clear_log">If active, logs are automatically cleared.</string>
	<string name="category_forward_port">Port Forwarding</string>
	<string name="title_mode_debug">Debug mode</string>
	<string name="summary_mode_debug">Allows you to see more advanced information in the logs.</string>
	<string name="title_number_max_threads">Maximum Number of Threads</string>
	<string name="summary_number_max_threads">The greater the number of Threads, the greater the power consumption and the connection speed on your device.</string>
	<string name="category_filter_apps" />
	<string name="title_filter_apps">Apps Filter</string>
	<string name="title_bypass_mode">Bypass Mode</string>
	<string name="summary_bypass_modo">If active, traffic from the selected applications will be sent directly.</string>
	<string name="title_apps_list">List of Apps</string>
	<string name="summary_apps_list">Enter a package name by line. See Settings -> Apps for the package name of the apps.</string>
	<string name="category_settings_adicionais">Additional configurations</string>
	<string name="title_ping_time">Ping (seconds)</string>
	<string name="category_user_interface">User Interface</string>
	<string name="title_language">Language</string>
	<string name="category_tunnel">Tunnel</string>
	<string name="ssh_server">SSH Server</string>
	<string name="ssh_port">SSH Port</string>
	<string name="ssh_porta_local">Local Port (Socks5)</string>
	<string name="payload">Payload</string>
	<string name="proxy_remote">Remote Proxy</string>
	<string name="proxy_ip">Proxy IP/Host</string>
	<string name="proxy_port">Port</string>
	<string name="proxy_auth">Proxy Authentication</string>
	<string name="proxy_user">Username</string>
	<string name="proxy_pass">Password</string>
	<string name="dir_name">Folder</string>
	<string name="alert_exit">Are you sure you want to Exit This VPN?</string>
	<string name="alert_clear_settings">Are you sure you want to restore the default settings?</string>
	<string name="no_value">none</string>
	<string name="ssl_value">m.facebook.com</string>
	<string name="def_value">HTTP Proxy (eg: Squid,Websocket)</string>
	<string name="blocked">Locked</string>
	<string name="expired">Expired</string>
	<string name="title_delete_file">Delete File</string>
	<string name="alert_delete_file">Do you want to delete this file?</string>
	<string name="dir_home_name">Internal memory</string>
	<string name="select_file_setting">Select the file</string>
	<string name="title_permission_request">Grant Permission</string>
	<string name="message_permission_request">Please, it is necessary to grant the necessary permission for the application to work correctly.</string>
	<string name="show_license">View Licenses</string>
	<string name="name_file">File name</string>
	<string name="export_button">Export</string>
	<string name="title_security">Security/Lock</string>
	<string name="check_protect">Lock configuration and prevent editing</string>
	<string name="title_extra">Extra</string>
	<string name="check_block_root">Block rooted device</string>
	<string name="check_show_login_start">Show Login at Home</string>
	<string name="check_date_valid">Set Expiration Date</string>
	<string name="input_note_msg">Message/Note for users (optional)</string>
	<string name="alert_block_settings">Configuration lock does not guarantee 100% security</string>
	<string name="error_empty_name_file">File name must not be empty</string>
	<string name="minimize">Minimize</string>
	<string name="yes">Yes</string>
	<string name="no">No</string>
	<string name="save">Save</string>
	<string name="open">Open</string>
	<string name="more">More</string>
	<string name="wait">Wait</string>
	<string name="close">Close</string>
	<string name="open_with">Open with</string>
	<string name="clear_settings">Clear Settings/Data</string>
	<string name="clear_logs">Clear Logs</string>
	<string name="settings_ImportExport">Import/Export</string>
	<string name="settings_import">Import Configuration</string>
	<string name="settings_export">Export Configuration</string>
	<string name="actived">Active</string>
	<string name="disabled">Disabled</string>
	<string name="wizard_details">Some details of SocksHttp</string>
	<string name="wizard_details_msg">SocksHttp is a VPN client that works through an SSH server. The application itself is useless without a configuration, so it is only for use by advanced users.</string>
	<string name="public_key">Public Key</string>
	<string name="summary_private_key">"Your slowdns server's public key"</string>
	<string name="title_name_server">Server Name</string>
	<string name="summary_name_server">The hostname of the SlowDNS server</string>
	<string name="slowdns_configuration">SlowDNS Settings</string>
	<string name="summary_dns">The DNS IP of your SlowDNS server</string>
</resources>