<androidx.preference.PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	android:key="screenMain">
	

	<androidx.preference.PreferenceCategory 
		android:title="Data Compression"
		app:iconSpaceReserved="false">
		
		<androidx.preference.CheckBoxPreference
			android:title="Data Compression" 
			android:key="data_compression" 
			android:summary="Compresses and speed up data transfer for files/data that can be compressed. NOT recommended for low memory device" 
			android:defaultValue="true" 
			app:iconSpaceReserved="false"/>
		
	</androidx.preference.PreferenceCategory>
	
	<androidx.preference.PreferenceCategory
		android:title="SlowDNS Settings">

		<androidx.preference.Preference
            android:key="openDNSScreen"
			app:fragment="com.chadx.injector.preference.SettingsDNSPreferences"
            android:title="SlowDNS SSH Settings"
			app:iconSpaceReserved="false"/>

	</androidx.preference.PreferenceCategory>
	
	<androidx.preference.PreferenceCategory
		android:title="@string/category_tunnel"
		app:iconSpaceReserved="false">
		
		<androidx.preference.Preference
            android:key="screenSSHSettings"
			app:fragment="com.chadx.injector.preference.SettingsSSHPreference"
            android:title="@string/settings_ssh"
			app:iconSpaceReserved="false"/>

	</androidx.preference.PreferenceCategory>
    
	
	<androidx.preference.PreferenceCategory
		android:title="@string/category_forward_udp"
		app:iconSpaceReserved="false">

		<androidx.preference.CheckBoxPreference
			android:key="udpForward"
			android:summary="@string/summary_forward_udp"
			android:title="@string/title_forward_udp" 
			app:iconSpaceReserved="false"/>

		<com.chadx.injector.view.SummaryEditTextPreference
            android:key="udpResolver"
            android:title="@string/title_resolver_udp"
            android:summary="@string/summary_resolver_udp"
            android:dialogMessage=""
			android:singleLine="true"
			android:dialogLayout="@layout/pref_dialog_edittext_fix"
			app:iconSpaceReserved="false"/>

	</androidx.preference.PreferenceCategory>
	
	
	<androidx.preference.PreferenceCategory
		android:title="@string/category_forward_dns"
		app:iconSpaceReserved="false">
		
		<androidx.preference.CheckBoxPreference
			android:key="dnsForward"
			android:summary="@string/summary_forward_dns"
			android:title="@string/title_forward_dns"
			app:iconSpaceReserved="false"/>
		
		<com.chadx.injector.view.SummaryEditTextPreference
            android:key="dnsResolver"
            android:title="@string/title_dns_primary"
            android:summary="@string/summary_dns_primary"
            android:dialogMessage="@string/dialog_message_dns_primary"
			android:singleLine="true"
			android:dialogLayout="@layout/pref_dialog_edittext_fix" 
			app:iconSpaceReserved="false"/>
		
	</androidx.preference.PreferenceCategory>
	
	
	<androidx.preference.PreferenceCategory
		android:title="@string/category_settings_adicionais"
		app:iconSpaceReserved="false">
		
		<androidx.preference.ListPreference
        	android:key="modeNight"
			android:defaultValue="off"
        	android:entries="@array/pref_modoNoturno_option_labels"
        	android:entryValues="@array/pref_modoNoturno_option_values"
        	android:title="@string/title_mode_night"
			app:iconSpaceReserved="false"/>
		
		<com.chadx.injector.view.SummaryEditTextPreference
            android:key="pingerSSH"
            android:title="@string/title_ping_time"
			android:maxLength="3"
            android:summary="@string/no_value"
			android:singleLine="true"
			android:dialogLayout="@layout/pref_dialog_number"
			app:iconSpaceReserved="false"/>
		
		<androidx.preference.CheckBoxPreference
			android:key="autoClearLogs"
			android:summary="@string/summary_auto_clear_log"
			android:title="@string/title_auto_clear_log"
			app:iconSpaceReserved="false"/>

		<androidx.preference.CheckBoxPreference
			android:key="hideLog"
			android:summary="@string/summary_hide_log"
			android:title="@string/title_hide_log"
			app:iconSpaceReserved="false"/>
		
	</androidx.preference.PreferenceCategory>
	
	
	<androidx.preference.PreferenceCategory
		android:title="@string/category_user_interface"
		app:iconSpaceReserved="false">
	
		<androidx.preference.ListPreference
        	android:key="idioma"
			android:defaultValue="default"
        	android:entries="@array/pref_idioma_option_labels"
        	android:entryValues="@array/pref_idioma_option_values"
        	android:title="@string/title_language"
			app:iconSpaceReserved="false"/>
		
	</androidx.preference.PreferenceCategory>
	
	
	<androidx.preference.Preference
    	android:key="screenAdvancedSettings"
		app:fragment="com.chadx.injector.preference.SettingsAdvancedPreference"
        android:title="@string/category_advanced_settings"
		app:iconSpaceReserved="false"/>
	
	
</androidx.preference.PreferenceScreen>
