<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto">
	
	<androidx.preference.PreferenceCategory
		android:title="SSH Tunnel"
		app:iconSpaceReserved="false">

		<com.chadx.injector.view.SummaryEditTextPreference
            android:key="sshServer"
            android:title="@string/ssh_server"
            android:summary="@string/no_value"
            android:dialogMessage=""
			android:singleLine="true"
			android:dialogLayout="@layout/pref_dialog_edittext_fix" 
			app:iconSpaceReserved="false"/>

		<com.chadx.injector.view.SummaryEditTextPreference
            android:maxLength="5"
            android:key="sshPort"
            android:title="@string/ssh_port"
			android:summary="@string/no_value"
			android:singleLine="true"
			android:dialogLayout="@layout/pref_dialog_number" 
			app:iconSpaceReserved="false"/>

	</androidx.preference.PreferenceCategory>

	<PreferenceCategory
		android:title="SlowDNS"
		app:iconSpaceReserved="false">

		<com.chadx.injector.view.SummaryEditTextPreference
            android:key="chaveKey"
            android:title="@string/public_key"
            android:summary="@string/summary_private_key"
            android:dialogMessage=""
			android:singleLine="false"
			android:dialogLayout="@layout/pref_dialog_edittext_fix"
			app:iconSpaceReserved="false"/>

		<com.chadx.injector.view.SummaryEditTextPreference
            android:key="serverNameKey"
            android:title="@string/title_name_server"
            android:summary="@string/summary_name_server"
            android:dialogMessage=""
			android:singleLine="true"
			android:dialogLayout="@layout/pref_dialog_edittext_fix"
			app:iconSpaceReserved="false"/>

		<com.chadx.injector.view.SummaryEditTextPreference
            android:key="dnsKey"
            android:title="DNS"
			android:summary="@string/summary_dns"
			android:singleLine="true"
			android:defaultValue="8.8.8.8"
			android:dialogLayout="@layout/pref_dialog_edittext_fix"
			app:iconSpaceReserved="false"/>

	</PreferenceCategory>

	<PreferenceCategory
		android:title="@string/slowdns_configuration"
		app:iconSpaceReserved="false">

		<com.chadx.injector.view.SummaryEditTextPreference
            android:key="sshUser"
            android:title="@string/auth_username"
            android:summary="none"
            android:dialogMessage=""
			android:singleLine="true"
			android:dialogLayout="@layout/pref_dialog_edittext_fix" 
			app:iconSpaceReserved="false"/>

		<com.chadx.injector.view.PasswordEditTextPreference
            android:key="sshPass"
            android:title="@string/proxy_pass"
            android:summary="none"
            android:dialogMessage=""
			android:singleLine="true"
            android:dialogLayout="@layout/pref_dialog_edittext_fix" 
			app:iconSpaceReserved="false"/>

	</PreferenceCategory>


</PreferenceScreen>
