<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<include
		layout="@layout/toolbar_main"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"/>

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:gravity="top|center"
		android:background="@color/white"
		android:padding="5dp">

		<LinearLayout
			android:id="@+id/activity_config_exportMainLinearLayout"
			android:layout_height="wrap_content"
			android:layout_width="match_parent"
			android:focusable="true"
			android:focusableInTouchMode="true"
			android:orientation="vertical"
			android:padding="10dp">

			<LinearLayout
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:orientation="vertical"
				android:background="@drawable/background_rounded"
				android:padding="5dp">

				<com.google.android.material.textfield.TextInputLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<com.google.android.material.textfield.TextInputEditText
						android:id="@+id/activity_config_exportNomeEdit"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:ems="10"
						android:hint="@string/name_file"
						android:textColor="@color/colorText"
						tools:ignore="TouchTargetSizeCheck" />

				</com.google.android.material.textfield.TextInputLayout>


			</LinearLayout>

			<TextView
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:text="@string/title_security"
				android:textStyle="bold"
				android:background="@color/colorSecondaryBackground"
				android:layout_marginTop="5dp"
				android:padding="5dp"/>

			<androidx.appcompat.widget.AppCompatCheckBox
				android:id="@+id/activity_config_exportProtegerCheck"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="3dp"
				android:hint="@string/check_protect"
				android:minHeight="48dp"
				android:textColor="@color/colorText" />


			<LinearLayout
				android:layout_height="wrap_content"
				android:layout_width="match_parent"
				android:orientation="vertical"
				android:background="@drawable/background_rounded"
				android:padding="5dp">

				<com.google.android.material.textfield.TextInputLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<com.google.android.material.textfield.TextInputEditText
						android:id="@+id/activity_config_exportMensagemEdit"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:ems="10"
						android:hint="@string/input_note_msg"
						android:textColor="@color/colorText"
						tools:ignore="TouchTargetSizeCheck" />

				</com.google.android.material.textfield.TextInputLayout>


			</LinearLayout>



			<LinearLayout
				android:layout_height="wrap_content"
				android:layout_width="wrap_content"
				android:orientation="vertical"
				android:layout_marginTop="5dp">

				<TextView
					android:layout_height="wrap_content"
					android:layout_width="match_parent"
					android:text="@string/title_extra"
					android:textStyle="bold"
					android:background="@color/colorSecondaryBackground"
					android:padding="5dp"/>

				<androidx.appcompat.widget.AppCompatCheckBox
					android:id="@+id/activity_config_exportBlockRootCheck"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginBottom="5dp"
					android:hint="@string/check_block_root"
					android:minHeight="48dp"
					android:textColor="@color/colorText" />

				<androidx.appcompat.widget.AppCompatCheckBox
					android:id="@+id/activity_config_exportShowLoginScreenCheck"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginBottom="5dp"
					android:hint="@string/check_show_login_start"
					android:minHeight="48dp"
					android:textColor="@color/colorText" />

				<LinearLayout
					android:layout_height="wrap_content"
					android:layout_width="match_parent"
					android:orientation="horizontal"
					android:paddingBottom="5dp">

					<androidx.appcompat.widget.AppCompatCheckBox
						android:id="@+id/activity_config_exportValidadeCheck"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:hint="@string/check_date_valid"
						android:textColor="@color/colorText"
						tools:ignore="TouchTargetSizeCheck" />

					<TextView
						android:id="@+id/activity_config_exportValidadeText"
						android:layout_height="match_parent"
						android:layout_width="wrap_content"
						android:text="(Unknown)"
						android:textStyle="bold"
						android:gravity="center"
						android:layout_marginLeft="5dp"
						android:visibility="invisible"/>

				</LinearLayout>

				<com.google.android.material.textfield.TextInputLayout
					android:id="@+id/activity_config_exportLayoutMensagemEdit"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"/>
				<RelativeLayout
						android:orientation="vertical"
						android:paddingTop="10.0dip"
						android:layout_width="fill_parent"
						android:layout_height="wrap_content">

					<Button
						android:id="@+id/activity_config_exportButton"
						android:layout_width="fill_parent"
						android:layout_height="48dp"
						android:layout_gravity="right"
						android:background="@drawable/btn_blue"
						android:text="@string/export_button"
						android:textColor="#ffffff" />
				</RelativeLayout>
			</LinearLayout>

		</LinearLayout>

	</ScrollView>

</LinearLayout>


